make some comments

--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -89,7 +89,7 @@ social vision --> moral vision --> two competing explanations (value-based vs. t
 People experience a substantial amount of moral events in everyday life [e.g., @hofmann_morality_2014]. Whether we are the agent, target, or a third party of a moral event, we always judge moral behaviors as "right" or "wrong", and by doing so, we judge moral character of people as "good" or "bad" [@uhlmann_person-centered_2015]. Moral character is so important in social life that a substantial part of people's conversation are gossiping others' moral character (or, reputation) [e.g., @dunbar_gossip_2004]. Also, evidence from studies of person perception and social evaluation revealed that morality is a basic dimension for social evaluation and it is weighed more than traits from other dimensions such as competence and sociability [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020]. The importance of moral character may have been internalized to individuals' self-concept and the positive moral self is the most important aspect of identity [e.g., @strohminger_true_2017], and moral character is a standard we used to evaluate our in-group members and distinguish out-group members [@ellemers_morality_2018]. 
 
 [No real perceptual studies on moral character] 
-Given the importance of moral character, people often assume that moral character related information are prioritized in human information processing system, especially 'bad' agents [e.g., the introduction part of @siegel_beliefs_2018]. A scrutiny of the literature, however, revealed few direct evidence. For example, while @schupp_facilitated_2004 and @ohman_face_2001 were cited to support this view, they are using facial expressions as stimuli that do not contain any moral meaning. @skowronski_negativity_1989, @fiske_attention_1980, and @baumeister_bad_2001 were also cited as evidence, but they were not referring to moral character in specific but using negative social traits, which include many other traits. For instance, @pratto_automatic_1991 focused on the desirability of personal traits, which is not specific to moral character either. While @vanneste_attention_2007 studied the attentional grabbing effect of facial expressions when agents decided not to cooperate, the mechanism of the effect, however, could not be attributed to uncooperativeness *per se*, because participants who performed the dot-detection task have no idea about the moral character and can have very different interpretations of those facial expressions. In short, though researchers in the field assumed that moral character, especially the bad one, is prioritized in information processing , direct evidence is scarce. This issue is not limited to moral character but common in person perception studies. As @freeman_dynamic_2011 put it, most studies in person perception didn't try to explain the perceptual process itself, rather, they are trying to explain the higher-order social cognitive processes that come after. Therefore, it remains unclear (1) whether moral character related information are prioritized in information processing (e.g., perception) and, if yes, (2) what are the underlying mechanisms of the prioritization effect.
+Given the importance of moral character, people often assume that moral character related information are prioritized in human information processing system, especially 'bad' agents [e.g., the introduction part of @siegel_beliefs_2018]. A scrutiny of the literature, however, revealed few direct evidence. For example, while @schupp_facilitated_2004 and @ohman_face_2001 were cited to support this view, they used facial expressions as stimuli that did not contain any moral meaning. @skowronski_negativity_1989, @fiske_attention_1980, and @baumeister_bad_2001 were also cited as evidence, but they were not referring to moral character in specific but using negative social traits, which include many other traits. For instance, @pratto_automatic_1991 focused on the desirability of personal traits, which is not specific to moral character either. While @vanneste_attention_2007 studied the attentional grabbing effect of facial expressions when agents decided not to cooperate, the mechanism of the effect, however, could not be attributed to uncooperativeness *per se*, because participants who performed the dot-detection task have no idea about the moral character and can have very different interpretations of those facial expressions. In short, though researchers in the field assumed that moral character, especially the bad one, is prioritized in information processing , direct evidence is scarce. This issue is not limited to moral character but common in person perception studies. As @freeman_dynamic_2011 put it, most studies in person perception didn't try to explain the perceptual process itself, rather, they are trying to explain the higher-order social cognitive processes that come after. Therefore, it remains unclear (1) whether moral character related information are prioritized in information processing (e.g., perception) and, if yes, (2) what are the underlying mechanisms of the prioritization effect.
 
 [Challenge: operationalization of moral character in laboratory settings] 
 The scarcity of studies on low-level information process of moral character is not without reasons. When trying to study moral character's effect on information process (e.g., perception), one big challenge lies in the difficulty to operationalize the moral character. Morality is defined by context. Whether a behavior should be judged as moral or immoral depends on a number of factors such as intention, consequences [@cushman_role_2006; @young_neural_2007]. Also, whether a behavior is moral relevant depends on cultural and social norm [@haidt_new_2007; @rai_moral_2011]. These contextual factors, when studied in laboratory settings, have to be carefully controlled and manipulated by providing complex verbal information. These complex verbal information, however, does not suit most classic cognitive paradigms where stimuli are presented shortly and participants are required to make quick decisions. 
@@ -2554,6 +2554,11 @@ library(patchwork)
 p_dist_1 + p_dist_2 + plot_annotation(tag_levels = 'A')  + plot_layout(nrow = 1, byrow = FALSE)
 
 ```
+We explored the self-reported psychological distance between different person. Participants a pair of two-person each time, and moved a slide to represent the distance between the pair. We found that, on average, participants rated self is closest to a neutral person, and then a good person. These two are not different from each other, however, both are closer than the distance between good person and neutral person. 
+
+Correlation analysis showed that most psychological distance ratings were positively correlated to each other, but the self-bad and self-good are negatively correlated. 
+
+[use the network view to visualize the distance]
 
 See Figure \@ref(fig:plot-person-dist).
 
