network view of personal distance

--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -211,7 +211,7 @@ social vision --\textgreater{} moral vision --\textgreater{} two competing expla
 People experience a substantial amount of moral events in everyday life (e.g., Hofmann, Wisneski, Brandt, \& Skitka, 2014). Whether we are the agent, target, or a third party of a moral event, we always judge moral behaviors as ``right'' or ``wrong,'' and by doing so, we judge moral character of people as ``good'' or ``bad'' (Uhlmann, Pizarro, \& Diermeier, 2015). Moral character is so important in social life that a substantial part of people's conversation are gossiping others' moral character (or, reputation) (e.g., Dunbar, 2004). Also, evidence from studies of person perception and social evaluation revealed that morality is a basic dimension for social evaluation and it is weighed more than traits from other dimensions such as competence and sociability (Abele, Ellemers, Fiske, Koch, \& Yzerbyt, 2020; Goodwin, 2015; Goodwin, Piazza, \& Rozin, 2014). The importance of moral character may have been internalized to individuals' self-concept and the positive moral self is the most important aspect of identity (e.g., Strohminger, Knobe, \& Newman, 2017), and moral character is a standard we used to evaluate our in-group members and distinguish out-group members (Ellemers, 2018).
 
 {[}No real perceptual studies on moral character{]}
-Given the importance of moral character, people often assume that moral character related information are prioritized in human information processing system, especially `bad' agents (e.g., the introduction part of Siegel, Mathys, Rutledge, \& Crockett, 2018). A scrutiny of the literature, however, revealed few direct evidence. For example, while Schupp et al. (2004) and Ohman, Lundqvist, and Esteves (2001) were cited to support this view, they are using facial expressions as stimuli that do not contain any moral meaning. Skowronski and Carlston (1989), Fiske (1980), and Baumeister, Bratslavsky, Finkenauer, and Vohs (2001) were also cited as evidence, but they were not referring to moral character in specific but using negative social traits, which include many other traits. For instance, Pratto and John (1991) focused on the desirability of personal traits, which is not specific to moral character either. While Vanneste, Verplaetse, Van Hiel, and Braeckman (2007) studied the attentional grabbing effect of facial expressions when agents decided not to cooperate, the mechanism of the effect, however, could not be attributed to uncooperativeness \emph{per se}, because participants who performed the dot-detection task have no idea about the moral character and can have very different interpretations of those facial expressions. In short, though researchers in the field assumed that moral character, especially the bad one, is prioritized in information processing , direct evidence is scarce. This issue is not limited to moral character but common in person perception studies. As Freeman and Ambady (2011) put it, most studies in person perception didn't try to explain the perceptual process itself, rather, they are trying to explain the higher-order social cognitive processes that come after. Therefore, it remains unclear (1) whether moral character related information are prioritized in information processing (e.g., perception) and, if yes, (2) what are the underlying mechanisms of the prioritization effect.
+Given the importance of moral character, people often assume that moral character related information are prioritized in human information processing system, especially `bad' agents (e.g., the introduction part of Siegel, Mathys, Rutledge, \& Crockett, 2018). A scrutiny of the literature, however, revealed few direct evidence. For example, while Schupp et al. (2004) and Ohman, Lundqvist, and Esteves (2001) were cited to support this view, they used facial expressions as stimuli that did not contain any moral meaning. Skowronski and Carlston (1989), Fiske (1980), and Baumeister, Bratslavsky, Finkenauer, and Vohs (2001) were also cited as evidence, but they were not referring to moral character in specific but using negative social traits, which include many other traits. For instance, Pratto and John (1991) focused on the desirability of personal traits, which is not specific to moral character either. While Vanneste, Verplaetse, Van Hiel, and Braeckman (2007) studied the attentional grabbing effect of facial expressions when agents decided not to cooperate, the mechanism of the effect, however, could not be attributed to uncooperativeness \emph{per se}, because participants who performed the dot-detection task have no idea about the moral character and can have very different interpretations of those facial expressions. In short, though researchers in the field assumed that moral character, especially the bad one, is prioritized in information processing , direct evidence is scarce. This issue is not limited to moral character but common in person perception studies. As Freeman and Ambady (2011) put it, most studies in person perception didn't try to explain the perceptual process itself, rather, they are trying to explain the higher-order social cognitive processes that come after. Therefore, it remains unclear (1) whether moral character related information are prioritized in information processing (e.g., perception) and, if yes, (2) what are the underlying mechanisms of the prioritization effect.
 
 {[}Challenge: operationalization of moral character in laboratory settings{]}
 The scarcity of studies on low-level information process of moral character is not without reasons. When trying to study moral character's effect on information process (e.g., perception), one big challenge lies in the difficulty to operationalize the moral character. Morality is defined by context. Whether a behavior should be judged as moral or immoral depends on a number of factors such as intention, consequences (Cushman, Young, \& Hauser, 2006; Young, Cushman, Hauser, \& Saxe, 2007). Also, whether a behavior is moral relevant depends on cultural and social norm (Haidt, 2007; Rai \& Fiske, 2011). These contextual factors, when studied in laboratory settings, have to be carefully controlled and manipulated by providing complex verbal information. These complex verbal information, however, does not suit most classic cognitive paradigms where stimuli are presented shortly and participants are required to make quick decisions.
@@ -463,24 +463,19 @@ The same trend appeared for the RT data. For shapes associated with good person,
 \caption{\label{fig:plot-person-dist}Self-rated personal distance}
 \end{figure}
 
-See Figure \ref{fig:plot-person-dist}.
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-person-dist-net-1.pdf}
+\caption{\label{fig:plot-person-dist-net}Self-rated personal distance (Network view)}
+\end{figure}
 
-\hypertarget{correlation-analyses}{%
-\subsection{Correlation analyses}\label{correlation-analyses}}
+We explored the self-reported psychological distance between different person. Participants were presented a pair of two-person each time, and moved a slide to represent the distance between the pair of two persons. We found that, on average, participants rated self is closest to a neutral person, and then a good person. These two are not different from each other. However, both are closer than the distance between good person and neutral person. On average, participants rated themselves has furthest distance to bad person.
 
-The reliability of questionnaires can be found in (Liu et al., 2020). We calculated the correlation between the data from behavioral task and the questionnaire data. First, we calculated the score for each scale based on their structure and factor loading, instead of sum score (McNeish \& Wolf, 2020). Then, we used SEM to estimate the correlation because it can include measurement model and statistical model in a unified framework.
+Correlation analysis showed that most psychological distance ratings were positively correlated to each other, but the self-bad and self-good are negatively correlated.
 
-To make sure that what we found were not false positive, we used two method to ensure the robustness of our analysis. first, we split the data into two half: the data with self and without, then, we used the conditional random forest to find the robust correlation in the exploratory data (with self reference) that can be replicated in the confirmatory data (without the self reference). The robust correlation were then analyzed using SEM
+{[}use the network view to visualize the distance{]}
 
-Instead of use the exploratory correlation analysis, we used a more principled way to explore the correlation between parameter of HDDM (\emph{v}, \emph{t}, and \emph{a}) and scale scores and person distance.
-
-We didn't find the correlation between scale scores and the parameters of HDDM, but found weak correlation between personal distance and the parameter estimated from Good and neutral conditions.
-
-First, boundary separation (\emph{a}) of moral good condition was correlated with both Self-Bad distance (\(r = 0.198\), 95\% CI {[}{]}, \(p = 0.0063\)) and Neutral-Bad distance (\(r = 0.1571\), 95\% CI {[}{]}, \(p = 0.031\)). At the same time, the non-decision time is negatively correlated with Self-Bad distance (\(r = 0.169\), 95\% CI {[}{]}, \(p = 0.0197\)). See Figure \ref{fig:plot-corr-1}.
-
-Second, we found the boundary separation of neutral condition is positively correlated with the personal distance between self and good distance (\(r = 0.189\), 95\% CI {[}{]}, \(p = 0.036\)), but negatively correlated with self-neutral distance(\(r = -0.183\), 95\% CI {[}{]}, \(p = 0.042\)). Also, the drift rate of the neutral condition is positively correlated with the Self-Bad distance (\(r = 0.177\), 95\% CI {[}{]}, \(p = 0.048\)).a. See figure \ref{fig:plot-corr-2}
-
-We also explored the correlation between behavioral data and questionnaire scores separately for experiments with and without self-referential, however, the sample size is very low for some conditions.
+See Figure \ref{fig:plot-person-dist} and Figure \ref{fig:plot-person-dist-net}.
 
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
@@ -492,6 +487,8 @@ In a series of experiments, we found that (1) good character are prioritized in 
 {[}Value-based attention?{]}
 
 {[}Good-self effect{]}
+
+{[}Discrepancy between self-reported distance and the reaction time, future studies{]}
 
 \hypertarget{references}{%
 \section{References}\label{references}}
@@ -585,9 +582,6 @@ Liu, Q., Wang, F., Yan, W., Peng, K., Sui, J., \& Hu, C.-P. (2020). Questionnair
 
 \leavevmode\hypertarget{ref-mchugh_moral_2019}{}%
 McHugh, C., McGann, M., Igou, E. R., \& Kinsella, E. (2019). \emph{Moral judgment as categorization ({MJAC})}. {PsyArXiv}. \url{https://doi.org/10.31234/osf.io/72dzp}
-
-\leavevmode\hypertarget{ref-mcneish_thinking_2020}{}%
-McNeish, D., \& Wolf, M. G. (2020). Thinking twice about sum scores. \emph{Behavior Research Methods}. \url{https://doi.org/10.3758/s13428-020-01398-0}
 
 \leavevmode\hypertarget{ref-ohman_face_2001}{}%
 Ohman, A., Lundqvist, D., \& Esteves, F. (2001). The face in the crowd revisited: A threat advantage with schematic stimuli. \emph{Journal of Personality and Social Psychology}, \emph{80}(3), 381--396. \url{https://doi.org/10.1037/0022-3514.80.3.381}
