--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -83,6 +83,12 @@ Alternative title: The good person is me: Spontaneous self-referential may expla
 
 [quotes about moral character]
 
+<!-- 
+Ideas: 
+little value in relying on people's self-reported moral principles or moral ideals to predict their real life behaviors, "paradox of morality" (Ellemers, 2019);
+moral associative learning as an stronger predictor??
+-->
+
 social vision --> moral vision --> two competing explanations (value-based vs. true-self-based) --> true-self is not perspective free but self-centered.
 
 [morality is central to social life, moral character is the central of morality]
@@ -2451,7 +2457,6 @@ df.scale.fs <- df.scale.fs %>%
 
 ```
 
-
 ```{r plot-person-dist, fig.cap="Self-rated personal distance", fig.width=8, warning=FALSE}
 # Boxplot
 p_dist_1 <- df.perdist %>% 
@@ -2486,6 +2491,13 @@ dist.cor <- df.perdist %>%
   dplyr::select(-c(subjID, expID)) %>%
   as.matrix() %>%
   Hmisc::rcorr(., type = 'spearman')
+
+# dist.cor_par <- df.perdist %>%
+#         dplyr::select(-c(subjID, expID)) %>%
+#         qgraph::cor_auto(.)
+# 
+# dist.cor_par_net <- bootnet::estimateNetwork(dist.cor_par, default = "pcor", corMethod = 'spearman')
+# plot(dist.cor_par_net)
 
 p_dist_2 <- ggcorrplot::ggcorrplot(dist.cor$r, hc.order = TRUE, type = "lower",
      outline.col = "white", colors = c('red', 'white', 'blue'),
@@ -2538,6 +2550,54 @@ p_dist_3 <- ggcorrplot::ggcorrplot(dist.cor2$r, hc.order = TRUE, type = "lower",
           #axis.line.y = element_line(color='black', size = 1),    # increase the size of font
           strip.text = element_text (size = 12, color = 'black'), # size of text in strips, face = "bold"
           panel.spacing = unit(0, "lines")) 
+
+library(patchwork)
+p_dist_1 + p_dist_2 + plot_annotation(tag_levels = 'A')  + plot_layout(nrow = 1, byrow = FALSE)
+```
+
+```{r plot-person-dist-net, fig.cap="Self-rated personal distance (Network view)", fig.width=8, warning=FALSE}
+df.perdist.sum_p <- df.perdist %>%
+        dplyr::rename(Self_Good = SelfGood,
+                      Self_Neut = SelfNeut,
+                      Self_Bad = SelfBad,
+                      Good_Neut = GoodNeut,
+                      Good_Bad = GoodBad,
+                      Neut_Bad = NeutBad) %>%
+  tidyr::pivot_longer(cols = Self_Good:Neut_Bad, 
+                      names_to = "condition",
+                      values_to = "distance") %>%
+  #dplyr::mutate(condition = factor(condition,
+  #                                 levels = c("GoodNeut", "NeutBad", "GoodBad",
+  #                                            "SelfNeut", "SelfGood", "SelfBad"))) %>%
+  dplyr::filter(!is.na(distance)) %>%
+  dplyr::group_by(condition) %>%
+  dplyr::summarise_each(funs(mean, sd, se=sd(.)/sqrt(n())), distance) %>%
+  dplyr::select(condition, mean) %>%
+  dplyr::add_row(condition = c("Self_Self", "Good_Good",
+                                "Neut_Neut","Bad_Bad")) %>%
+  tidyr::separate(condition, c('var1','var2'), sep = '_')
+
+# create a distance matrix
+df.dist.mat <- data.frame(matrix(ncol = 4, nrow = 4))
+colnames(df.dist.mat) <- unique(df.perdist.sum_p$var1)
+rownames(df.dist.mat) <- unique(df.perdist.sum_p$var1)
+
+for (i in 1:6){
+  rname = df.perdist.sum_p$var1[i]
+  cname = df.perdist.sum_p$var2[i]
+  value = df.perdist.sum_p$mean[i]
+  df.dist.mat[rname, cname] = value
+  df.dist.mat[cname, rname] = value
+}
+df.dist.mat[is.na(df.dist.mat)] <- 0
+
+df.dist.mat_t <- 1 - df.dist.mat
+
+library(qgraph)
+p_dist_4 <- qgraph(df.dist.mat_t, layout='spring', vsize=9, labels = colnames(df.dist.mat_t))
+
+# p_dist_5 <- qgraph(dist.cor$r, layout='spring', vsize=9, labels = colnames(dist.cor$r))
+
 # 
 # corrplot(dist.cor$r, type = "upper", order = "hclust", 
 #          tl.col = "black", tl.srt = 45,
@@ -2549,270 +2609,16 @@ p_dist_3 <- ggcorrplot::ggcorrplot(dist.cor2$r, hc.order = TRUE, type = "lower",
 # corrplot(dist.cor$r, type="upper", order="hclust", col=col)
 # legend(x="bottomright", legend=c("min", "ave", "max"), 
 #      fill=colorRampPalette(c( "red", "white", "blue"))(20))
-  
-library(patchwork)
-p_dist_1 + p_dist_2 + plot_annotation(tag_levels = 'A')  + plot_layout(nrow = 1, byrow = FALSE)
 
 ```
-We explored the self-reported psychological distance between different person. Participants a pair of two-person each time, and moved a slide to represent the distance between the pair. We found that, on average, participants rated self is closest to a neutral person, and then a good person. These two are not different from each other, however, both are closer than the distance between good person and neutral person. 
+
+We explored the self-reported psychological distance between different person. Participants were presented a pair of two-person each time, and moved a slide to represent the distance between the pair of two persons. We found that, on average, participants rated self is closest to a neutral person, and then a good person. These two are not different from each other. However, both are closer than the distance between good person and neutral person. On average, participants rated themselves has furthest distance to bad person.
 
 Correlation analysis showed that most psychological distance ratings were positively correlated to each other, but the self-bad and self-good are negatively correlated. 
 
 [use the network view to visualize the distance]
 
-See Figure \@ref(fig:plot-person-dist).
-
-## Correlation analyses
-The reliability of questionnaires can be found in [@Liu_2020_JOPD]. We calculated the correlation between the data from behavioral task and the questionnaire data. First, we calculated the score for each scale based on their structure and factor loading, instead of sum score [@mcneish_thinking_2020]. Then, we used SEM to estimate the correlation because it can include measurement model and statistical model in a unified framework. 
-
-To make sure that what we found were not false positive, we used two method to ensure the robustness of our analysis. first, we split the data into two half: the data with self and without, then, we used the conditional random forest to find the robust correlation in the exploratory data (with self reference) that can be replicated in the confirmatory data (without the self reference). The robust correlation were then analyzed using SEM
-
-
-```{r correlation analysis, echo=FALSE, results='hide', warning=FALSE, message=FALSE, eval=FALSE}
-### failed attempt:
-# We tried to first correlate the DDM parameters and the questionnaire separately for self-referential and other-referential, and then validation the correlation using data of experiment without self/other-referential. But the sample size for the correlation between questionnaires and behavioral results from experiment without identity are too small n = 16. Therefore, we give up this exploration-validation approach.
-
-# Step 1: Get the parameter values
-params.list <- list.files(here::here('HDDM'), pattern = '*_hddm_params.csv')
-
-df_hddm_ls_1 <- params.list[c(1:4, 9:10)]
-df_hddm_ls_2 <- params.list[c(5, 6, 11:13)]
-
-for (indx in 1:6){
-  if ((indx ==1) && exists('df_hddm_param_1')){   # if the variable already exist before the for loop start
-    rm(df_hddm_param_1)
-  }
-  if (indx == 5 ){
-    hddm_params_tmp <- read.csv(here::here("HDDM", df_hddm_ls_1[indx]), header = TRUE, sep = ",",
-                   stringsAsFactors=FALSE,na.strings=c("","NA")) %>%
-      dplyr::filter(domain == "Morality") %>%
-      dplyr::rename(Subject = subj_idx, Matchness = match, Valence = val) %>%
-      dplyr::select(Subject, Matchness, Valence, knode_name, mean) %>%
-      tidyr::drop_na() %>%
-      tidyr::separate(knode_name, into = paste('v', 1:2, sep= '')) %>%
-      dplyr::rename(param = v1)  %>% dplyr::filter(Matchness=='Match') %>% dplyr::select(- c(v2, Matchness)) %>%
-      tidyr::pivot_wider(., names_from = c('Valence', 'param'), values_from = 'mean')  
-    
-  } else {
-    hddm_params_tmp <- read.csv(here::here("HDDM", df_hddm_ls_1[indx]), header = TRUE, sep = ",",
-                   stringsAsFactors=FALSE,na.strings=c("","NA")) %>%
-      dplyr::rename(Subject = subj_idx, Matchness = match, Valence = val) %>%
-      dplyr::select(Subject, Matchness, Valence, knode_name, mean) %>%
-      tidyr::drop_na() %>%
-      tidyr::separate(knode_name, into = paste('v', 1:2, sep= '')) %>%
-      dplyr::rename(param = v1)  %>% dplyr::filter(Matchness=='Match') %>% dplyr::select(- c(v2, Matchness)) %>%
-      tidyr::pivot_wider(., names_from = c('Valence', 'param'), values_from = 'mean')   # %>%
-      #dplyr::mutate(ExpID = 'Exp1a')
-  }
-  if (exists('df_hddm_param_1')) {
-    df_hddm_param_1 <- rbind(df_hddm_param_1, hddm_params_tmp) 
-  } else {
-    df_hddm_param_1 <- hddm_params_tmp
-  }
-}
-
-for (indx in 1:5){
-  if ((indx ==1) && exists('df_hddm_param_2')){   # in case the variable exist in the env.
-    rm(df_hddm_param_2)
-  }
-  hddm_params_tmp <- read.csv(paste(here::here("HDDM", df_hddm_ls_2[indx])), header = TRUE, sep = ",",
-                 stringsAsFactors=FALSE,na.strings=c("","NA")) %>%
-    dplyr::rename(Subject = subj_idx, Matchness = match, Valence = val, Identity = id) %>%
-    dplyr::select(Subject, Matchness, Identity, Valence, knode_name, mean) %>%
-    tidyr::drop_na() %>%
-    tidyr::separate(knode_name, into = paste('v', 1:2, sep= '')) %>%
-    dplyr::rename(param = v1)  %>% 
-    dplyr::filter(Matchness=='Match') %>% 
-    dplyr::select(- c(v2, Matchness)) %>%
-    tidyr::unite(conds, c(Valence, param)) %>%
-    #tidyr::unite(conds, c(Identity, Valence, param)) %>%
-    tidyr::pivot_wider(., names_from = c('conds'), values_from = 'mean')   # %>%
-    #dplyr::mutate(ExpID = 'Exp1a')
-  if (indx == 4 | indx == 5){
-    hddm_params_tmp <- hddm_params_tmp %>%
-      dplyr::mutate(Neutral_v = NA,
-                    Neutral_a = NA,
-                    #Other_Neutral_v = NA,
-                    #Other_Neutral_a = NA,
-                    #Other_Neutral_t = NA,
-                    Neutral_t = NA) # %>%
-      #dplyr::select(Subject, Identity, Bad_a, Good_a, Neutral_a, Bad_v, Good_v, Neutral_v, Bad_t, Good_t,
-      #              Neutral_t)
-  }
-  
-  if (exists('df_hddm_param_2')) {
-    df_hddm_param_2 <- rbind(df_hddm_param_2, hddm_params_tmp) 
-  } else {
-    df_hddm_param_2 <- hddm_params_tmp
-  }
-}
-
-df_hddm_param_1 <- df_hddm_param_1 %>%
-  dplyr::mutate(Identity = NA) %>%
-  dplyr::select(colnames(df_hddm_param_2))
-
-df_hddm_param_all <- df_hddm_param_2 %>%
-  dplyr::filter(Identity == "Self") %>%
-  rbind(df_hddm_param_1, .)
-
-# intersection between participant from behavioral task and scales and get the data
-subj.common <- intersect(df.scale.fs$subjID, unique(df_hddm_param_all$Subject))  # 260
-
-df.q_scores.v <- df.scale.fs %>% dplyr::filter(subjID %in% subj.common) %>%
-  dplyr::select_if(~sum(!is.na(.)) > 0) # remove columns that only have NA.
-
-# temp data for SEM
-# tmp <- merge(df.scales.v, df_hddm_param_all, by.x = 'subjID', by.y = 'Subject')
-
-## calculate correlation ----
-df.corr <- merge(df.q_scores.v, df_hddm_param_all, by.x = 'subjID', by.y = 'Subject') %>%
-  dplyr::select(-c(expID, Identity)) %>%
-  dplyr::select(-contains('_sum')) # %>%
-  
-# library(corrr)
-res.cor_all <-df.corr %>%
-  dplyr::select(-c(subjID)) %>%
-  as.matrix() %>%
-  Hmisc::rcorr(., type = 'spearman')
-
-#heatmap(x = res.cor_all$r, col = col, symm = TRUE)
-
-p.mat <- res.cor_all$P %>%
-  tidyr::replace_na(1)
-
-# plat the corr matrix
-#ggcorrplot::ggcorrplot(res.cor_all$r, hc.order = TRUE, p.mat = p.mat, insig = "blank", # type = "lower",
-#                       outline.col = "black", colors = c('red', 'white', 'blue'), lab = T)
-
-#res.cor_all <-df.corr %>%
-#  dplyr::select(-c(subjID)) %>%
-#  correlation::correlation(., method="spearman", p_adjust = "holm")
-
-param1_names <- colnames(df.scale.fs)[7:length(df.scale.fs)]
-param2_names <- colnames(df_hddm_param_all[3:11])
-
-cor_pairs_all <- data.frame(matrix(ncol = 4, nrow = 0))
-x <- c("Parameter1", "Parameter2", "r", 'p')
-colnames(cor_pairs_all) <- x
-i = 0
-for (param1 in param1_names) {
-  # print(param1)
-  for (param2 in param2_names) {
-    tmp_r <- res.cor_all$r[param1, param2]
-    tmp_p <- res.cor_all$P[param1, param2]
-    if (tmp_p <= 0.05) {
-      i = i + 1
-      cor_pairs_all[i, "Parameter1"] <- param1
-      cor_pairs_all[i, "Parameter2"] <- param2
-      cor_pairs_all[i, "r"] <- tmp_r
-      cor_pairs_all[i, "p"] <- tmp_p
-    }
-  }
-}
-
-```
-
-Instead of use the exploratory correlation analysis, we used a more principled way to explore the correlation between parameter of HDDM (*v*, *t*, and *a*) and scale scores and person distance. 
-
-```{r get plots of correlation, echo=FALSE, results='hide', warning=FALSE, message=FALSE, eval=FALSE}
-# Permutation
-set.seed(12345)
-permutation <- function(df) {
-  v1 <- df[, 1] %>% base::sample(.)
-  v2 <- df[, 2] %>% base::sample(.)
-  tmp_cor <- cor(v1, v2, method = "pearson")
-  tmp_cor
-}
-
-# plot for all
-boot_plot_list <- list()
-corr_plot_list <- list()
-for (row_id in 1:nrow(cor_pairs_all)){
-  
-  # select variables
-  var1 <- df.corr %>% dplyr::select(cor_pairs_all$Parameter1[row_id])
-  var2 <- df.corr %>% dplyr::select(cor_pairs_all$Parameter2[row_id])
-  var_tmp <- data.frame(var1, var2) %>%
-    tidyr::drop_na()
-  
-  # boot
-  boot_var <- var_tmp %>%
-    bootES::bootES(., R = 5000, effect.type = 'r')
-  
-  cor_pairs_all$BootES_cor[row_id] <- boot_var$t0[1]
-  cor_pairs_all$BootES_lb[row_id] <- boot_var$bounds[[1]]
-  cor_pairs_all$BootES_ub[row_id] <- boot_var$bounds[[2]]
-  
-  # permutation
-  per_cor <- rep(NA, 5000)
-  for (i in 1:length(per_cor)){
-    per_cor[i] <- permutation(var_tmp)
-  }
-  
-  # plot scatter plot
-  corr_plot_list[[row_id]] <- data.frame(var1, var2) %>%
-    ggplot(., aes_string(x = cor_pairs_all$Parameter1[row_id], y = cor_pairs_all$Parameter2[row_id])) + 
-    geom_point() + 
-    geom_smooth(method=lm) +
-    labs(title=paste(cor_pairs_all$Parameter1[row_id], '&', cor_pairs_all$Parameter2[row_id], sep = ' '), 
-       x = cor_pairs_all$Parameter1[row_id], 
-       y = cor_pairs_all$Parameter2[row_id]) +
-    apatheme_s
-  
-  # plot permutation and boot 
-  boot_cor <- boot_var$t %>%
-    as.data.frame(.) %>%
-    dplyr::arrange(V1) %>%
-    dplyr::rename(corcoef = V1) %>%
-    dplyr::mutate(Method = 'bootstrap')
-    # dplyr::pull(V1)
-  per_cor <- data.frame(per_cor) %>%
-    dplyr::rename(corcoef = per_cor) %>%
-    dplyr::mutate(Method = 'permutation')
-  
-  probs <- c(0.025, 0.975)
-  quantiles <- quantile(per_cor$corcoef, prob=probs)
-  
-  # p_dist_df <- rbind(boot_cor, per_cor)
-  
-  xd <- data.frame(density(per_cor$corcoef)[c("x", "y")]) %>% dplyr::mutate(Method = 'permutation')
-  yd <- data.frame(density(boot_cor$corcoef)[c("x", "y")]) %>% dplyr::mutate(Method = 'bootstrap')
-  zd <- rbind(xd, yd)
-  
-  label_r <- paste("r = ", round(cor_pairs_all$r[row_id], 3), sep = '')
-  
-  boot_plot_list[[row_id]] <- ggplot(zd, aes(x, y, group=Method, colour = Method)) + 
-      geom_area(data = subset(xd, x > quantiles[1] & x < quantiles[2]), fill = "grey") + # plot the 95 % area of zero
-      geom_line() + 
-      geom_vline(xintercept = cor_pairs_all$r[row_id], colour = 'blue') +
-      geom_vline(xintercept = quantiles[1], colour = 'grey', linetype="dashed") + 
-      geom_vline(xintercept = quantiles[2], colour = 'grey', linetype="dashed") + 
-      geom_vline(xintercept = 0, colour = 'grey', linetype="dashed") + 
-      # geom_text(aes(x = cor_pairs_all$r[row_id]*2, y = 6, label = label_r), colour = 'blue') +
-      scale_color_grey() +
-      apatheme_s
-}
-
-```
-We didn't find the correlation between scale scores and the parameters of HDDM, but found weak correlation between personal distance and the parameter estimated from Good and neutral conditions. 
-
-First, boundary separation (*a*) of moral good condition was correlated with both Self-Bad distance ($r = 0.198$, 95% CI [], $p = 0.0063$) and Neutral-Bad distance ($r = 0.1571$, 95% CI [], $p = 0.031$). At the same time, the non-decision time is negatively correlated with Self-Bad distance ($r = 0.169$, 95% CI [], $p = 0.0197$). See Figure \@ref(fig:plot-corr-1).
-
-```{r plot-corr-1, fig.cap="Correlation between moral identity and boundary separation of good condition; moral self-image and drift rate of good condition", fig.width=8, warning=FALSE, eval=FALSE}
-library(patchwork)
-corr_plot_list[[3]] + corr_plot_list[[6]] + corr_plot_list[[5]]  + 
-           boot_plot_list[[3]] + boot_plot_list[[6]] + boot_plot_list[[5]]+ plot_layout(ncol = 3)
-```
-
-Second, we found the boundary separation of neutral condition is positively correlated with the personal distance between self and good distance ($r = 0.189$, 95% CI [], $p = 0.036$), but negatively correlated with self-neutral distance($r = -0.183$, 95% CI [], $p = 0.042$). Also, the drift rate of the neutral condition is positively correlated with the Self-Bad distance ($r = 0.177$, 95% CI [], $p = 0.048$).a. See figure \@ref(fig:plot-corr-2)
-
-```{r plot-corr-2, fig.cap="Correlation between personal distance and boundary separation of neutral condition", fig.width=8, warning=FALSE, eval=FALSE}
-library(patchwork)
-corr_plot_list[[1]] + corr_plot_list[[2]]  + corr_plot_list[[4]] + 
-           boot_plot_list[[1]] + boot_plot_list[[2]] + boot_plot_list[[4]] + plot_layout(ncol = 3)
-```
-
-We also explored the correlation between behavioral data and questionnaire scores separately for experiments with and without self-referential, however, the sample size is very low for some conditions.
+See Figure \@ref(fig:plot-person-dist) and Figure \@ref(fig:plot-person-dist-net).
 
 # Discussion
 In a series of experiments, we found that (1) good character are prioritized in perceptual matching task; (2) this effect was robust when moral characters are self-referential but not stranger-referential; (3) when the self-good character combined, whether task-relevant or not, participants responded faster and more accurately than when other-good character were combined. The other-good character combination might slow down the responses. The self-reported mental distance scale also showed that people rated self has longer distance to bad character.
@@ -2822,6 +2628,8 @@ In a series of experiments, we found that (1) good character are prioritized in 
 [Value-based attention?]
 
 [Good-self effect]
+
+[Discrepancy between self-reported distance and the reaction time, future studies]
 
 
 # References
