revise the abstract

--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -183,14 +183,14 @@ Kaiping Peng, Department of Psychology, Tsinghua University, 100084 Beijing, Chi
 Jie Sui, School of Psychology, University of Aberdeen, Aberdeen, Scotland.
 Authors contriubtion: HCP, JS, \& KP design the study, HCP collected the data, HCP analyzed the data and drafted the manuscript. All authors read and agreed upon the current version of the manuscripts.
 
-Correspondence concerning this article should be addressed to Hu Chuan-Peng, School of Psychology, Nanjing Normal University, Ninghai Road 122, Gulou District, 210024 Nanjing, China. E-mail: \href{mailto:hcp4715@gmail.com}{\nolinkurl{hcp4715@gmail.com}}
+Correspondence concerning this article should be addressed to Hu Chuan-Peng, School of Psychology, Nanjing Normal University, Ninghai Road 122, Gulou District, 210024 Nanjing, China. E-mail: \href{mailto:hcp4715@hotmail.com}{\nolinkurl{hcp4715@hotmail.com}}
 
 }
 
 \affiliation{\vspace{0.5cm}\textsuperscript{1} Nanjing Normal University, 210024 Nanjing, China\\\textsuperscript{2} Tsinghua University, 100084 Beijing, China\\\textsuperscript{3} University of Aberdeen, Aberdeen, Scotland}
 
 \abstract{
-Morality is central to social life, moral character is central to morality. Researchers assume that moral character information is prioritized in perceptual process, yet the evidence is scarce. In a series of experiments, we examined the effect of immediately acquired moral character information on perceptual matching. Participants first learned the association between moral characters (labels) and visual cues (shapes), then performed a shape-label perceptual matching task. The results revealed that shapes associated with good character were prioritized, as compared to shapes associated with neutral or bad characters. This effect was robust after changing the words for label or using diagnostic behavioral as an proxy of mroal character. Also, this pattern was robust when changing simultaneous presentation to sequential presentation. We then examined two approximate explanations for this effect: value-based prioritization versus social-categorization based prioritization. We manipulated the identity of moral character explicitly and found that good character effect was strong when it refers to the self but weak or non-exist when it refers to a stranger. In further experiments where both identity or moral character information were presented but only one of them served as task-relevant stimuli, we found that task-irrelevant good character facilitate response to self but slow down the response to stranger and that task-irrelevant self-referntial information facilitated response to good character but task-irrlevant stranger-referential information slowed down response to good character. Together, these results suggested that people are senstive to who is the good character, but less sensitive to who is the neutral or bad character. When the identity information is ambiguous, people may spontaneously referring the good character as self. These results added new evidence for the social vision and suggested the advantage of good character depends on the self-relevance.
+Researchers in moral psychology had long assumed that information related to bad moral character is prioritized in information processing, yet the evidence is scarce. The main challenage lies operationalizing moral character in classic cognitive tasks. Social associative learning task, where participant learn the association between social conceptions and neutral stimuli and then perform cognitive tasks (e.g., matching judgment), had been proved to be an effective way to study the information processing of social and affective factors. Here, we examined the information process of moral character using social associataive learning task. Across 9 experiments (N = XXX, trials = XXX), we found an opposite but robust effect: shapes associated with good character were prioritized, as compared to shapes associated with neutral or bad characters. Crucially, good character effect was robust when it referred to the self but weak or non-exist when it referred to a stranger. Moreover, when identity or moral character information became task-irrelevant, good character still interact with self-referential processing: good self combination facilitate the process while good-other combination slowed down the process. Together, these results suggested a positiviity bias in social associative learning task where good character are prioritized.
 }
 
 
@@ -429,7 +429,7 @@ Because we have found that a facilitation effect of good character and slow-down
 
 For the \emph{d} prime, we found that an interaction between moral character effect and self-referential, the self- and other-referential difference was greater than zero for good vs.~neutral character differences (\(median_{diff}\) = 0.51; 95\% HDI = {[}-1.48 2.61{]}) but not for bad vs.~neutral differences (\(median_{diff}\) = -0.02; 95\% HDI = {[}-1.85 2.17{]}). Further analyses revealed that the good vs.~neutral character effect only appeared for self-referential conditions but not other-referential conditions. The estimated \emph{d} prime for good-self was greater than neutral-self (\(median_{diff}\) = 0.56; 95\% HDI = {[}-1.05 2.15{]}), \emph{d} prime for good-self was also greater than good-other condition (\(median_{diff}\) = ; 95\% HDI = {[} {]}). The differences between bad-self and neutral-self, good-other and neutral-other, bad-other and neutral-other are all centered around zero (see Figure \ref{fig:plot-bayes2}, B, D).
 
-For the RTs part, we also found the interaction between moral character and self-referential, the self- and other-referential differences was below zero for the good vs.~neutral differences (\(median_{diff}\) = -110.23; 95\% HDI = {[}-587.40 307.33{]}) but not for the bad vs.~neutral differences (\(median_{diff}\) = -14.83; 95\% HDI = {[}-235.54 138.36{]}). Further analyses revealed a robust good-self prioritization effect as compared to neutral-self (\(median_{diff}\) = -51.73; 95\% HDI = {[}-144.56 1.59{]}) and good-other (\(median_{diff}\) = -51.69; 95\% HDI = {[}-818.62 743.60{]}) conditions. Also, we found that both good character and bad character were responded slower than neutral character when it was other-referential. See Figure \ref{fig:plot-bayes2}.
+For the RTs part, we also found the interaction between moral character and self-referential, the self- and other-referential differences was below zero for the good vs.~neutral differences (\(median_{diff}\) = -105.39; 95\% HDI = {[}-533.16 281.69{]}) but not for the bad vs.~neutral differences (\(median_{diff}\) = -9.46; 95\% HDI = {[}-290.72 251.38{]}). Further analyses revealed a robust good-self prioritization effect as compared to neutral-self (\(median_{diff}\) = -47.58; 95\% HDI = {[}-202.88 16.83{]}) and good-other (\(median_{diff}\) = -57.14; 95\% HDI = {[}-991.89 621.29{]}) conditions. Also, we found that both good character and bad character were responded slower than neutral character when it was other-referential. See Figure \ref{fig:plot-bayes2}.
 
 \hypertarget{binding-the-good-and-self}{%
 \subsection{Binding the good and self}\label{binding-the-good-and-self}}
