--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -7,7 +7,7 @@ author:
     affiliation   : "1, 2"
     corresponding : yes    # Define only one corresponding author
     address       : "School of Psychology, Nanjing Normal University, Ninghai Road 122, Gulou District, 210024 Nanjing, China"
-    email         : "hcp4715@gmail.com"
+    email         : "hcp4715@hotmail.com"
   - name          : "Kaiping Peng"
     affiliation   : "2"
   - name          : "Jie Sui"
@@ -28,7 +28,7 @@ authornote: |
   Authors contriubtion: HCP, JS, & KP design the study, HCP collected the data, HCP analyzed the data and drafted the manuscript. All authors read and agreed upon the current version of the manuscripts.
 
 abstract: |
- Morality is central to social life, moral character is central to morality. Researchers assume that moral character information is prioritized in perceptual process, yet the evidence is scarce. In a series of experiments, we examined the effect of immediately acquired moral character information on perceptual matching. Participants first learned the association between moral characters (labels) and visual cues (shapes), then performed a shape-label perceptual matching task. The results revealed that shapes associated with good character were prioritized, as compared to shapes associated with neutral or bad characters. This effect was robust after changing the words for label or using diagnostic behavioral as an proxy of mroal character. Also, this pattern was robust when changing simultaneous presentation to sequential presentation. We then examined two approximate explanations for this effect: value-based prioritization versus social-categorization based prioritization. We manipulated the identity of moral character explicitly and found that good character effect was strong when it refers to the self but weak or non-exist when it refers to a stranger. In further experiments where both identity or moral character information were presented but only one of them served as task-relevant stimuli, we found that task-irrelevant good character facilitate response to self but slow down the response to stranger and that task-irrelevant self-referntial information facilitated response to good character but task-irrlevant stranger-referential information slowed down response to good character. Together, these results suggested that people are senstive to who is the good character, but less sensitive to who is the neutral or bad character. When the identity information is ambiguous, people may spontaneously referring the good character as self. These results added new evidence for the social vision and suggested the advantage of good character depends on the self-relevance.
+ Researchers in moral psychology had long assumed that information related to bad moral character is prioritized in information processing, yet the evidence is scarce. The main challenage lies operationalizing moral character to suit cognitive tasks. Social associative learning task, where participants first learn the associations between social conceptions and neutral stimuli and then perform cognitive tasks (e.g., matching judgment), had been proved to be an effective way to study the information processing of social and affective factors. Here, we examined the information process of moral character using social associataive learning task. Across 9 experiments (N = XXX, trials = XXX), we found a robust but opposite effect: shapes associated with good character were prioritized, as compared to shapes associated with neutral or bad characters. Crucially, good character effect was robust when it referred to the self but weak or non-exist when it referred to a stranger. Moreover, even when identity or moral character information became task-irrelevant, good character still interact with self-referential processing: the good-self combination facilitate the process while the good-other combination slowed down the process. Together, these results suggested a positiviity bias in social associative learning task where good character are prioritized.
   
  <!-- https://tinyurl.com/ybremelq -->
   
